--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,11 +11,16 @@
   <script src="lib/jasmine-2.3.4/jasmine-html.js"></script>
   <script src="lib/jasmine-2.3.4/boot.js"></script>
 
+  <script src="src/jquery.js"></script>
+  <script src="lib/jasmine-jquery.js"></script>
+
   <!-- include source files here... -->
   <script type="text/javascript" src="src/Thermostat.js"></script>
+  
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/ThermostatSpec.js"></script>
+  <script type="text/javascript" src="spec/ThermostatWebSpec.js"></script>
 
 </head>
 
